--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -24,6 +24,7 @@ jobs:
             ${{ runner.os }}-node-
       - name: Install package
         run: |
+          npm install
           npm run build
       - name: Deploy
         uses: crazy-max/ghaction-github-pages@v2
