--- a/config.yml
+++ b/config.yml
@@ -344,6 +344,8 @@ bookmark:
     url: https://jubt.cf/cn/index.html#磁力搜索引擎
   - name: 网盘搜索
     url: https://adzhp.cn/wang-pan-sou-suo.html
+  - name: 🇨🇳法律法规数据库
+    url: https://flk.npc.gov.cn/
   - name: 天眼查
     url: https://www.tianyancha.com/
     favicon: tianyancha.png
