--- a/config.yml
+++ b/config.yml
@@ -6,7 +6,7 @@ images:
   - https://tva4.sinaimg.cn/large/007HLCaply1g3txganifkj31hc0u07nc.jpg # Steins;Gate 0 CG
   - https://tva1.sinaimg.cn/large/007HLCaply1g3txg3ge70j31jk13a7ea.jpg # 花の庭 #JK #Yuri
   # - https://tva1.sinaimg.cn/large/007HLCaply1g3txfykvg5j31jk0yq7bb.jpg # 万象物语
-  - https://tva1.sinaimg.cn/large/be297bc5gy1gi8rdnnyomj21hc0tlnpd.jpg # 美食殿堂水着三人组
+  - https://tva1.sinaimg.cn/large/be297bc5gy1gi8rdnnyomj21hc0tlnpd.jpg # 美食殿堂水着
 
 bookmark:
   - name: Google
@@ -18,9 +18,14 @@ bookmark:
   - name: QQ邮箱
     url: https://mail.qq.com/
     favicon: qqmail.png
-  - name: YandexMail
-    url: https://mail.yandex.com/
-    favicon: yandexmail.png
+  - name: Outlook
+    url: https://outlook.live.com/mail/0/inbox
+    favicon: outlook.png
+  - name: 谷歌地图
+    url: https://www.google.com/maps/
+    favicon: googlemap.png
+  # - name: YandexMail
+  #   url: https://mail.yandex.com/
   - name: Wikipedia
     url: https://zh.wikipedia.org/zh-hans/Wikipedia:%E9%A6%96%E9%A1%B5
     favicon: wiki.png
@@ -34,11 +39,9 @@ bookmark:
     url: https://www.bilibili.com/
     favicon: bilibili.png
   - name: Telegram
-    url: https://web.telegram.org/
+    url: https://webz.telegram.org/
+  #   url: https://webk.telegram.org/
     favicon: telegram.png
-  - name: Inoreader
-    url: https://jp.inoreader.com/language/chinese-simplified
-    favicon: inoreader.png
   - name: 坚果云
     url: https://www.jianguoyun.com/
     favicon: jianguoyun.png
@@ -115,15 +118,19 @@ bookmark:
   - name: reddit
     url: https://www.reddit.com/
     favicon: reddit.png
-  - name: 4chan
-    url: https://www.4chan.org/
-    favicon: 4chan.png
+  # - name: 4chan
+  #   url: https://www.4chan.org/
+  # - name: Два.ч
+  #   url: https://2ch.hk/
   - name: Twitch
     url: https://www.twitch.tv/
     favicon: twitch.png
   - name: Steam
     url: https://steamcommunity.com/
     favicon: steam.png
+  - name: 远景论坛
+    url: http://bbs.pcbeta.com/forum.php
+    favicon: pcbeta.png
   - name: A岛匿名版
     url: https://adnmb.com/
   - name: ExcelHome
@@ -169,6 +176,9 @@ bookmark:
   - name: StackOverflow
     url: https://stackoverflow.com/
     favicon: stackoverflow.png
+  - name: SuperUser
+    url: https://superuser.com/
+    favicon: superuser.png
   - name: MDN
     url: https://developer.mozilla.org/zh-CN/docs/Learn
     favicon: mdn.png
@@ -185,9 +195,9 @@ bookmark:
   - name: musicForProgramming
     url: https://musicforprogramming.net/
     favicon: musicforprogramming.png
-  - name: Coding
-    url: https://coding.net/
-    favicon: coding.png
+  - name: gitee
+    url: https://gitee.com/
+    favicon: gitee.png
   - name: Popular Blocks
     url: https://bl.ocks.org/
 
@@ -198,6 +208,9 @@ bookmark:
   - name: Textnow
     url: https://www.textnow.com/messaging
     favicon: textnow.png
+  - name: Inoreader
+    url: https://jp.inoreader.com/language/chinese-simplified
+    favicon: inoreader.png
   - name: UnicodeTable
     url: https://unicode-table.com/cn/
     favicon: unicodetable.png
@@ -210,7 +223,7 @@ bookmark:
   - name: Dropmail
     url: https://dropmail.me/zh/
   - name: AriaNg
-    url: http://es1raq.coding-pages.com/
+    url: http://ariang.mayswind.net/latest
   - name: Sketchpad
     url: https://sketch.io/sketchpad/?lang=zh
     favicon: sketchpad.png
@@ -242,7 +255,7 @@ bookmark:
   - name: TinyPNG
     url: https://tinypng.com/
   - name: Watermark
-    url: https://ee6vut.coding-pages.com/
+    url: http://watermark.dxcweb.com/
     favicon: pic.png
   - name: EZGIF
     url: https://ezgif.com/
@@ -251,8 +264,12 @@ bookmark:
     url: https://img.vim-cn.com/
   - name: P.SDA1.DEV
     url: https://p.sda1.dev/
-  - name: 牛图网
+  - name: NIUPIC
     url: https://niupic.com/
+  - name: 聚合 - KIENG图床
+    url: https://image.kieng.cn/
+  - name: 聚合 - 遇见图床
+    url: https://www.hualigs.cn/
   - name: ImgOps
     url: https://imgops.com/
     favicon: imgops.png
