--- a/config.yml
+++ b/config.yml
@@ -34,7 +34,7 @@ bookmark:
     url: https://zh.wikipedia.org/zh-hans/Wikipedia:%E9%A6%96%E9%A1%B5
     favicon: wiki.png
   - name: Notion
-    url: https://www.notion.so/
+    url: https://www.notion.so/70/
     favicon: notion.png
   - name: Youtube
     url: https://www.youtube.com/
