--- a/config.yml
+++ b/config.yml
@@ -66,7 +66,7 @@ bookmark:
   - name: Telegraph
     url: https://telegra.ph/
     favicon: telegraph.png
-  - name: <b>fast pass, BT search & image host</b>
+  - name: <b>More....</b>
     url: https://rentry.co/webservice
 
   - category: SNS
@@ -195,9 +195,9 @@ bookmark:
   - name: RegExr
     url: https://regexr.com/
     favicon: regexr.png
-  - name: CodePen
-    url: https://codepen.io/pen/
-    favicon: codepen.png
+  - name: JSFiddle
+    url: https://jsfiddle.net
+    favicon: jsfiddle.png
   - name: Carbon
     url: https://carbon.now.sh/
   - name: HTML2MD
@@ -208,10 +208,10 @@ bookmark:
   - name: gitee
     url: https://gitee.com/
     favicon: gitee.png
-  # - name: Popular Blocks
-  #   url: https://bl.ocks.org/
-  - name: FullStackOpen
-    url: https://fullstackopen.com/zh/
+  - name: PopularBlocks
+    url: https://bl.ocks.org/
+  - name: <b>More....</b>
+    url: https://rentry.co/acg
 
   - category: Utils
   - name: GoogleVoice
