--- a/config.yml
+++ b/config.yml
@@ -211,7 +211,7 @@ bookmark:
   - name: PopularBlocks
     url: https://bl.ocks.org/
   - name: <b>More....</b>
-    url: https://rentry.co/acg
+    url: https://rentry.co/idev
 
   - category: Utils
   - name: GoogleVoice
